# version-api

./: .gitignore  Cargo.toml  README.md  render.yaml  rustfmt.toml
.github/workflows/: rust.yml
actix-example/: Cargo.toml
actix-example/src/: main.rs  responder.rs
core/src/: lib.rs  version.rs
core/src/registry/: mod.rs  response.rs
version-actix/: Cargo.toml
version-actix-roundtrip-example/: Cargo.toml
version-actix-roundtrip-example/src/: main.rs
version-actix-roundtrip-example/src/routes/: api_version.rs  mod.rs
version-actix-roundtrip-example/src/routes/user/: mod.rs  request_changes.rs  response_changes.rs
version-actix-roundtrip-example/src/versioning/: mod.rs  request.rs  response.rs
version-actix/examples/: user-request.rs  user-response.rs
version-actix/src/: from_request.rs  lib.rs  responder.rs
version-actix/src/extractors/: base_extractor.rs  mod.rs
version-actix/tests/: request_tests.rs  response_tests.rs  test.rs
version-api-macros/: Cargo.toml
version-api-macros/src/: api_version.rs  change_history.rs  derive_api_version_id.rs  derive_change_history.rs  derive_version_change.rs  lib.rs  version_change.rs
version-core/: Cargo.toml
version-core/examples/: struct-definition.rs
version-core/src/: lib.rs  version.rs
version-core/src/registry/: mod.rs  registry.rs  response.rs
version-id/: Cargo.toml
version-id/src/: lib.rs
