[package]
name = "version-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
version-core = { path = "../version-core" }
version-id = { path = "../version-id" }

[dev-dependencies]
actix-rt = "2"
version-api-macros = { path = "../version-api-macros" }
